hphp/hack/test/typecheck/denotable_unions/tconst_union.php.exp
ERROR: File "tconst_union.php", line 14, characters 56-56:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
